// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email loader @eno-lang.org throws an error 1`] = `
"'value' must contain a valid email address, for instance 'jane.doe@eno-lang.org'.

   Line | Content
 >    1 | value: @eno-lang.org
"
`;

exports[`email loader john.doe@.org throws an error 1`] = `
"'value' must contain a valid email address, for instance 'jane.doe@eno-lang.org'.

   Line | Content
 >    1 | value: john.doe@.org
"
`;

exports[`email loader john.doe@eno-lang throws an error 1`] = `
"'value' must contain a valid email address, for instance 'jane.doe@eno-lang.org'.

   Line | Content
 >    1 | value: john.doe@eno-lang
"
`;
